# FUT-K

./: .gitignore  CLA.md  Guide_to_Football_Soccer_data_and_APIs.md  LICENSE  LICENSING.md  NOTICE  PRIVACY.md  README.md  RESULTS.md  RESULTS_COMPARE.md  RESULTS_FIT.md  RESULTS_INFLUENCE.md  RESULTS_NETWORK.md  conftest.py  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  ask.py  benchmarks.py  config.py  customdata.py  db.py  evolution.py  fusionstore.py  ingest.py  insights.py  knowledgestore.py  learningloop.py  live.py  livefeed.py  main.py  models.py  network.py  observability.py  panel.py  scout.py  security.py  similarity.py  sovereignty.py  story.py  twin.py  whatif.py
backend/scripts/: build_replay_streams.py  enrich_bios.py  ingest.py  ingest_custom.py  ingest_fused.py  init_db.py  prove_no_leakage.py  recalibrate.py  refresh.py
backend/tests/: conftest.py  test_api.py  test_custom_data.py  test_decisions_api.py  test_fusion_api.py  test_ingest.py  test_knowledge_api.py  test_knowledge_capture.py  test_knowledge_graph.py  test_knowledge_phase_d.py  test_learning_loop.py  test_levels_api.py  test_live_api.py  test_live_insights.py  test_livefeed_api.py  test_network_api.py  test_ops_api.py  test_product_api.py  test_replay_api.py  test_schema.py  test_scout_api.py  test_simulate_api.py  test_sovereignty_api.py  test_tactics_api.py  test_twin_api.py  test_vision_api.py  test_whatif_api.py
docs/: ARCHITECTURE.md  CUSTOM_DATA.md  DATA_SOURCES.md  DEPLOYMENT.md  ROADMAP.md  SCOUT.md  VISION.md
examples/: custom_events_sample.csv  tracking_sample.csv
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
plugins/: expected_chaos.py
scripts/: _experiments.py  benchmark_external.py  build_influence.py  build_networks.py  build_profiles.py  compare_competitions.py  fit_learned_statsbomb.py  fit_regime_statsbomb.py  fit_statsbomb.py  fit_targets_statsbomb.py  fuse_sources.py  ingest_statsbomb.py  outcome_accuracy.py  report.py  run_monte_carlo.py
sdk/: README.md
tests/: conftest.py  test_architecture.py  test_behavior.py  test_calibration.py  test_canonical.py  test_causality.py  test_change.py  test_coaches.py  test_confidence.py  test_consensus.py  test_context.py  test_data_boundary.py  test_dynamics.py  test_eventbus.py  test_explain.py  test_footballdata.py  test_footballdata_live.py  (+28 more)
(+112 files in other folders)
