[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fie"
version = "0.1.0"
description = "Football Intelligence Engine — mechanics validation suite"
readme = "README.md"
requires-python = ">=3.11"
# src/fie itself is dependency-free (standard library only), matching the
# main document's constraint. All third-party deps are test-only (the [dev] extra).
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.90",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: Monte-Carlo / convergence tests (larger N, still fixed seed in CI)",
]
